Machine_Learning_(Supervised&Unsupervised).ipynb

--- a/Machine_Learning_(Supervised&Unsupervised).ipynb
+++ b/Machine_Learning_(Supervised&Unsupervised).ipynb
@@ -70,10 +70,10 @@
       ],
       "source": [
         "#Reading data\n",
-        "data=pd.read_csv(\"/content/movie_ratings_dataset.csv\") #Rupam\n",
+        "data=pd.read_csv(\"/content/movie_ratings_dataset.csv\") \n",
         "\n",
-        "#data=pd.read_csv(\"/content/drive/MyDrive/Academic Notes/CSE422/Movie Rating Prediction/movie_ratings_dataset (1).csv\") #U\n",
-        "\n",
+        
+        
         "data.head()\n",
         "data.columns\n"
       ]
